# Sandbox-studies

./: .gitignore  empty_test.xlsx
drag-test/: README.md  angular.json  package-lock.json  package.json
drag-test/src/: index.html
drag-test/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  note.ts  notes.service.ts
my-app/src/: styles.css
my-app/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts  housing.service.ts
node/webScraping/: index.js  package-lock.json  package.json
node/webScraping/vanilla/: quintoandar.js  zapimoveis.js
node/webScraping2/: package.json
python/: ClassesAndObjects.py  EX001.py  py.py  range.py  requirements.txt  tryExcept.py  tuples.py
python/DataProcessing/: interactingCSV.py  interactingJSON.py  interactingYAML.py  pandas.py  pandasInteracting.py
python/DataProcessing/content/: config.yaml  empty_test.xlsx  empty_test3.xlsx  projectsinfo2.json  randomData.csv  randomData2.csv  toJson.xlsx
python/OSInteraction/: manipulateFiles.py  subprocesses.py
python/demo/: pyproject.toml
python/heavyTest/: heavy.py
python/modules/: Animals.py  Tiger.py  florest.py
python/workingWJSON/: interactingJSON.py
react/: package-lock.json
react/notes/: package-lock.json  package.json
tests/: testText4.txt
typescript/: Ex00.js  Ex00.ts  sandbox.js  sandbox.ts
typescript/basics/: Ex00.ts  sandbox.js  sandbox.ts
typescript/puretsApplication/: index.html  package.json
webpages/react/: package-lock.json
webpages/webScrapingTest/: index.html  style.css
(+23 files in other folders)
