[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Gustavo Ferreira da Silva <gustavofsilvas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
